logs/dag_id=crypto_coins_etl/run_id=manual__2023-01-21T06:15:58.100406+00:00/task_id=create_coins_table/attempt=1.log
[2023-01-21T06:16:01.604+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: crypto_coins_etl.create_coins_table manual__2023-01-21T06:15:58.100406+00:00 [queued]>
[2023-01-21T06:16:01.617+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: crypto_coins_etl.create_coins_table manual__2023-01-21T06:15:58.100406+00:00 [queued]>
[2023-01-21T06:16:01.618+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-01-21T06:16:01.619+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-01-21T06:16:01.619+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-01-21T06:16:01.632+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_coins_table> on 2023-01-21 06:15:58.100406+00:00
[2023-01-21T06:16:01.639+0000] {standard_task_runner.py:55} INFO - Started process 3648 to run task
[2023-01-21T06:16:01.643+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'crypto_coins_etl', 'create_coins_table', 'manual__2023-01-21T06:15:58.100406+00:00', '--job-id', '90', '--raw', '--subdir', 'DAGS_FOLDER/crypto_coins_etl.py', '--cfg-path', '/tmp/tmpx2f9uqqp']
[2023-01-21T06:16:01.646+0000] {standard_task_runner.py:83} INFO - Job 90: Subtask create_coins_table
[2023-01-21T06:16:01.722+0000] {task_command.py:388} INFO - Running <TaskInstance: crypto_coins_etl.create_coins_table manual__2023-01-21T06:15:58.100406+00:00 [running]> on host ac5a85f5e1cc
[2023-01-21T06:16:01.791+0000] {taskinstance.py:1507} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=crypto_coins_etl
AIRFLOW_CTX_TASK_ID=create_coins_table
AIRFLOW_CTX_EXECUTION_DATE=2023-01-21T06:15:58.100406+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-01-21T06:15:58.100406+00:00
[2023-01-21T06:16:01.794+0000] {sql.py:254} INFO - Executing:  CREATE TABLE IF NOT EXISTS coin(             id INT  AUTO_INCREMENT  PRIMARY KEY,             name TEXT ,             symbol TEXT ,             current_price FLOAT NOT NULL,             high_24h FLOAT NOT NULL,             low_24h FLOAT NOT NULL         );
[2023-01-21T06:16:01.804+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-01-21T06:16:02.043+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-01-21T06:16:02.048+0000] {sql.py:375} INFO - Running statement:  CREATE TABLE IF NOT EXISTS coin(             id INT  AUTO_INCREMENT  PRIMARY KEY,             name TEXT ,             symbol TEXT ,             current_price FLOAT NOT NULL,             high_24h FLOAT NOT NULL,             low_24h FLOAT NOT NULL         );, parameters: None
[2023-01-21T06:16:02.050+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 260, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AUTO_INCREMENT"
LINE 1: ...ATE TABLE IF NOT EXISTS coin(             id INT  AUTO_INCRE...
                                                             ^

[2023-01-21T06:16:02.059+0000] {taskinstance.py:1318} INFO - Marking task as FAILED. dag_id=crypto_coins_etl, task_id=create_coins_table, execution_date=20230121T061558, start_date=20230121T061601, end_date=20230121T061602
[2023-01-21T06:16:02.071+0000] {standard_task_runner.py:100} ERROR - Failed to execute job 90 for task create_coins_table (syntax error at or near "AUTO_INCREMENT"
LINE 1: ...ATE TABLE IF NOT EXISTS coin(             id INT  AUTO_INCRE...
                                                             ^
; 3648)
[2023-01-21T06:16:02.098+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-01-21T06:16:02.128+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
